HNLinks UI Overflow fixed + Added worker to compute memory extensive task

--- a/pages/vanavil/hnlinks/HNLinksViewer.module.css
+++ b/pages/vanavil/hnlinks/HNLinksViewer.module.css
@@ -83,4 +83,25 @@
 .comment-tree-node,
 .comment-tree-node * {
   color: black !important;
+  overflow: auto;
+}
+
+.comment-tree-node *::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.comment-tree-node *::-webkit-scrollbar
+{
+	width: 8px;
+	height: 8px;
+}
+
+.comment-tree-node *::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #9c9c9c;
 }
